--- a/pom.xml
+++ b/pom.xml
@@ -1,4 +1,5 @@
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+  xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
   <modelVersion>4.0.0</modelVersion>
 
   <artifactId>test_helper</artifactId>
@@ -9,7 +10,7 @@
   <parent>
   	<groupId>de.uni-potsdam.hpi.metanome</groupId>
   	<artifactId>deployment</artifactId>
-  	<version>0.0.2-SNAPSHOT</version>
+  	<version>0.0.1-SNAPSHOT</version>
   	<relativePath>../deployment/pom.xml</relativePath>
   </parent>
 
