#10 added test for LongPair equals and hashCode

--- a/pom.xml
+++ b/pom.xml
@@ -56,6 +56,12 @@
         </dependency>
         <dependency>
             <groupId>de.uni-potsdam.hpi.metanome</groupId>
+            <artifactId>test_helper</artifactId>
+            <version>0.0.2-SNAPSHOT</version>
+            <scope>test</scope>
+        </dependency>
+        <dependency>
+            <groupId>de.uni-potsdam.hpi.metanome</groupId>
             <artifactId>algorithm_integration</artifactId>
             <version>0.0.2-SNAPSHOT</version>
             <scope>compile</scope>
