--- a/test_helper/pom.xml
+++ b/test_helper/pom.xml
@@ -26,7 +26,7 @@
 
     <parent>
         <groupId>de.metanome</groupId>
-        <artifactId>metanome</artifactId>
+        <artifactId>metanome_data_structures</artifactId>
         <version>0.0.2-SNAPSHOT</version>
         <relativePath>../pom.xml</relativePath>
     </parent>
@@ -65,13 +65,6 @@
         <dependency>
             <groupId>junit</groupId>
             <artifactId>junit</artifactId>
-            <version>4.11</version>
-            <scope>compile</scope>
-        </dependency>
-        <dependency>
-            <groupId>com.google.gwt</groupId>
-            <artifactId>gwt-servlet</artifactId>
-            <version>${gwtVersion}</version>
             <scope>compile</scope>
         </dependency>
     </dependencies>
