--- a/pom.xml
+++ b/pom.xml
@@ -20,7 +20,7 @@
     <modelVersion>4.0.0</modelVersion>
 
     <groupId>de.metanome</groupId>
-    <artifactId>metanome_data_structures</artifactId>
+    <artifactId>metanome_data_structures_root</artifactId>
     <packaging>pom</packaging>
     <name>metanome_data_structures</name>
     <version>0.0.2-SNAPSHOT</version>
@@ -50,6 +50,7 @@
 
     <modules>
         <module>algorithm_helper</module>
+        <module>algorithm_helper_benchmarks</module>
         <module>test_helper</module>
     </modules>
 
