--- a/pom.xml
+++ b/pom.xml
@@ -89,6 +89,21 @@
                         </execution>
                     </executions>
                 </plugin>
+                <plugin>
+                    <groupId>org.codehaus.mojo</groupId>
+                    <artifactId>cobertura-maven-plugin</artifactId>
+                    <version>2.6</version>
+                    <configuration>
+                        <check/>
+                        <formats>
+                            <format>xml</format>
+                        </formats>
+                        <aggregate>true</aggregate>
+                        <instrumentation>
+                            <exclude>de/metanome/test_helper/**/*.class</exclude>
+                        </instrumentation>
+                    </configuration>
+                </plugin>
             </plugins>
         </pluginManagement>
 
