--- a/algorithm_helper/pom.xml
+++ b/algorithm_helper/pom.xml
@@ -104,6 +104,12 @@
             <artifactId>algorithm_integration</artifactId>
             <scope>compile</scope>
         </dependency>
+        <dependency>
+            <groupId>de.metanome</groupId>
+            <artifactId>backend</artifactId>
+            <scope>compile</scope>
+        </dependency>
+
     </dependencies>
 
 </project>
