--- a/pom.xml
+++ b/pom.xml
@@ -263,6 +263,11 @@
             </dependency>
             <dependency>
                 <groupId>de.metanome</groupId>
+                <artifactId>backend</artifactId>
+                <version>0.0.2-SNAPSHOT</version>
+            </dependency>
+            <dependency>
+                <groupId>de.metanome</groupId>
                 <artifactId>test_helper</artifactId>
                 <version>0.0.2-SNAPSHOT</version>
             </dependency>
