--- a/algorithm_helper/pom.xml
+++ b/algorithm_helper/pom.xml
@@ -109,6 +109,12 @@
       <artifactId>backend</artifactId>
       <scope>compile</scope>
     </dependency>
+    <dependency>
+      <groupId>com.zaxxer</groupId>
+      <artifactId>SparseBitSet</artifactId>
+      <version>1.0</version>
+      <scope>compile</scope>
+    </dependency>
 
   </dependencies>
 
