--- a/algorithm_helper/pom.xml
+++ b/algorithm_helper/pom.xml
@@ -109,7 +109,12 @@
       <artifactId>backend</artifactId>
       <scope>compile</scope>
     </dependency>
-
+    <dependency>
+      <groupId>org.mapdb</groupId>
+      <artifactId>mapdb</artifactId>
+      <version>1.0.8</version>
+      <scope>compile</scope>
+    </dependency>
   </dependencies>
 
 </project>
