--- a/algorithm_helper/pom.xml
+++ b/algorithm_helper/pom.xml
@@ -109,6 +109,12 @@
       <artifactId>backend</artifactId>
       <scope>compile</scope>
     </dependency>
+    <dependency>
+      <groupId>org.xerial.snappy</groupId>
+      <artifactId>snappy-java</artifactId>
+      <version>1.1.2-RC3</version>
+      <scope>compile</scope>
+    </dependency>
 
   </dependencies>
 
