--- a/algorithm_helper/pom.xml
+++ b/algorithm_helper/pom.xml
@@ -110,9 +110,9 @@
       <scope>compile</scope>
     </dependency>
     <dependency>
-      <groupId>org.xerial.snappy</groupId>
-      <artifactId>snappy-java</artifactId>
-      <version>1.1.2-RC3</version>
+      <groupId>me.lemire.integercompression</groupId>
+      <artifactId>JavaFastPFOR</artifactId>
+      <version>0.1.3</version>
       <scope>compile</scope>
     </dependency>
 
